--- a/foundations/intro-to-css/02-class-id-selectors/index.html
+++ b/foundations/intro-to-css/02-class-id-selectors/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <p>Number 1 - I'm a class!</p>
-    <div>Number 2 - I'm one ID.</div>
-    <p>Number 3 - I'm a class, but cooler!</p>
-    <div>Number 4 - I'm another ID.</div>
-    <p>Number 5 - I'm a class!</p>
+    <p class="element-style">Number 1 - I'm a class!</p>
+    <div id="second-element">Number 2 - I'm one ID.</div>
+    <p class="element-style font-size-24">Number 3 - I'm a class, but cooler!</p>
+    <div class="font-size-24" id="fourth-element">Number 4 - I'm another ID.</div>
+    <p class="element-style">Number 5 - I'm a class!</p>
   </body>
 </html>
